--- a/css.css
+++ b/css.css
@@ -3,7 +3,7 @@ body {
 }
 .teamname {
     font-family:'Roboto', sans-serif;
-    font-size: 12;
+    font-size: 32px;
     font-weight: bold;
     z-index: 2;
     text-align: center;
