account for ties

--- a/css.css
+++ b/css.css
@@ -20,3 +20,7 @@ td.blue {
 td.victory {
     background-color: rgba(0, 255, 0, 0.5);
 }
+
+td.tie {
+    background-color: rgba(0, 255, 255, 0.5);
+}
