add trello link

--- a/css.css
+++ b/css.css
@@ -82,6 +82,6 @@ a:active {
   line-height: 150px;
   color: white;
   font-weight: bold;
-  font-size: 3em;
+  font-size: 12px;
   text-align: center;
 }
