--- a/css.css
+++ b/css.css
@@ -40,6 +40,23 @@ a:active {
    color: #073395;
 }
 
+a.black:link {
+   text-decoration: none;
+   color: #000000;
+}
+a.black:visited {
+   text-decoration: none;
+   color: #000000;
+}
+a.black:hover {
+   text-decoration: none;
+   color: #000000;
+}
+a.black:active {
+   text-decoration: none;
+   color: #000000;
+}
+
 .headercontainer {
   padding: 0;
   margin: 0;
